<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/tv_map_lable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sag_cal_title_lable"
        style="?android:listSeparatorTextViewStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_span"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:text="@string/crag_cal_span"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/crag_cal_span"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ellipsize="end"
            android:maxEms="7"
            android:maxLines="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:orientation="horizontal">

        <TextView
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/crag_cal_nominal_height"
        android:layout_marginRight="15dp"
        android:textStyle="bold"/>
        <EditText
            android:id="@+id/crag_cal_nominal_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ellipsize="end"
            android:maxEms="7"
            android:maxLines="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/crag_cal_instrument_height"
            android:layout_marginRight="15dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/crag_cal_instrument_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ellipsize="end"
            android:maxEms="7"
            android:maxLines="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/crag_cal_string_length"
            android:layout_marginRight="15dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/crag_cal_string_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/input_num_character"
            android:ellipsize="end"
            android:maxEms="7"
            android:maxLines="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:textStyle="bold"
            android:text="@string/crag_cal_hang_angle"
            />

        <EditText
            android:id="@+id/tv_crag_cal_hg_degree"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ellipsize="end"
            android:maxEms="3"
            android:maxLines="1"/>
        <TextView
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:text="度"/>
        <EditText
            android:id="@+id/tv_crag_cal_hg_minute"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ellipsize="end"
            android:maxEms="3"
            android:maxLines="1"/>
        <TextView
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:text="分"/>
        <EditText
            android:id="@+id/tv_crag_cal_hg_second"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ellipsize="end"
            android:maxEms="3"
            android:maxLines="1"/>
        <TextView
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:text="秒"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:textStyle="bold"
            android:text="@string/crag_cal_observation_angle"
            />

        <EditText
            android:id="@+id/tv_crag_cal_ob_degree"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ellipsize="end"
            android:maxEms="3"
            android:maxLines="1"/>
        <TextView
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:text="度"/>
        <EditText
            android:id="@+id/tv_crag_cal_ob_minute"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ellipsize="end"
            android:maxEms="3"
            android:maxLines="1"/>
        <TextView
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:text="分"/>
        <EditText
            android:id="@+id/tv_crag_cal_ob_second"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ellipsize="end"
            android:maxEms="3"
            android:maxLines="1"/>
        <TextView
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:text="秒"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bt_crag_cal_get_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:textColor="#FFFFFF"
            android:text="@string/crag_cal_get_result"/>
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sag_cal_result"
        style="?android:listSeparatorTextViewStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:visibility="gone"
        android:orientation="horizontal">
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/crag_cal_value_of_a"
            android:layout_marginRight="15dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/crag_cal_value_of_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:visibility="gone"
        android:orientation="horizontal">
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/crag_cal_value_of_b"
            android:layout_marginRight="15dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/crag_cal_value_of_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/crag_cal_value_of_sag"
            android:layout_marginRight="15dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/crag_cal_value_of_sag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crag_cal_get_angle"
        style="?android:listSeparatorTextViewStyle"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/crag_cal_observation_angle"
            android:layout_marginRight="15dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/crag_cal_get_angle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
    </LinearLayout>

</LinearLayout>