<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crag_cal_out_title"
        style="?android:listSeparatorTextViewStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_out_L"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:text="@string/crag_cal_out_L"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/crag_cal_out_L"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ellipsize="end"
            android:maxEms="7"
            android:maxLines="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/crag_cal_out_L_other"
            android:layout_marginRight="15dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/crag_cal_out_L_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ellipsize="end"
            android:maxEms="7"
            android:maxLines="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/crag_cal_out_f"
            android:layout_marginRight="15dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/crag_cal_out_f"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ellipsize="end"
            android:maxEms="7"
            android:maxLines="1"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crag_cal_out_angle"
        style="?android:listSeparatorTextViewStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:textStyle="bold"
            android:text="@string/crag_cal_out_a1"
            />

        <EditText
            android:id="@+id/tv_crag_cal_a1_degree"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ellipsize="end"
            android:maxEms="3"
            android:maxLines="1"/>
        <TextView
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:text="度"/>
        <EditText
            android:id="@+id/tv_crag_cal_a1_minute"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ellipsize="end"
            android:maxEms="3"
            android:maxLines="1"/>
        <TextView
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:text="分"/>
        <EditText
            android:id="@+id/tv_crag_cal_a1_second"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ellipsize="end"
            android:maxEms="3"
            android:maxLines="1"/>
        <TextView
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:text="秒"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:textStyle="bold"
            android:text="@string/crag_cal_out_a2"
            />

        <EditText
            android:id="@+id/tv_crag_cal_a2_degree"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ellipsize="end"
            android:maxEms="3"
            android:maxLines="1"/>
        <TextView
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:text="度"/>
        <EditText
            android:id="@+id/tv_crag_cal_a2_minute"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ellipsize="end"
            android:maxEms="3"
            android:maxLines="1"/>
        <TextView
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:text="分"/>
        <EditText
            android:id="@+id/tv_crag_cal_a2_second"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ellipsize="end"
            android:maxEms="3"
            android:maxLines="1"/>
        <TextView
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:text="秒"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bt_crag_cal_out_get_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:text="@string/crag_cal_get_result"/>
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crag_cal_out_a3"
        style="?android:listSeparatorTextViewStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="a3"
            android:layout_marginRight="15dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/crag_cal_out_a3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crag_cal_out_F"
        style="?android:listSeparatorTextViewStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="F"
            android:layout_marginRight="15dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/crag_cal_out_F"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
    </LinearLayout>

</LinearLayout>