<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="相关功能"
        style="?android:listSeparatorTextViewStyle"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="相关功能"
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle.Inverse"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:orientation="vertical"
        android:gravity="center"
        >
        <Button
            android:id="@+id/sag_cal"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/button_style"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/sag_cal"/>
        <Button
            android:id="@+id/sag_cal_out"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/button_style"
            android:textColor="#FFFFFF"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/sag_cal_out"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="相关功能"
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle.Inverse"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="相关说明"
        style="?android:listSeparatorTextViewStyle"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="相关功能"
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle.Inverse"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:orientation="vertical"
        android:gravity="center"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:textColor="#FFFFFF"
            android:lineSpacingExtra="3dp"
            android:lineSpacingMultiplier="1.2"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/about"/>
        </LinearLayout>



</LinearLayout>